--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Responsive Coffee</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <script src="main.js"></script>
+    <script src="./script.js"></script>
 </head>
 <body>
     <header>
         <a href="#" class="logo">
-            <img src="img/logocoffee.png" alt="">
+            <img src="logocoffee.png" alt="">
         </a>
         <i class='bx bx-menu'id="menu-icon"></i>
 
@@ -25,11 +25,19 @@
         <div class="header-icon">
             <i class='bx bx-cart' ></i>
             <i class='bx bx-search' id="search-icon"></i>
-
         </div>
-        
-    </header>
-
+        <div class="search-box">
+            <input type="search" name="" id=""placeholder="Search Here...">
+        </div>
+  </header>
+<section class="home" id="home">
+    <div class="home-text">
+        <h1>Start your day<br>with coffee</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis numquam saepe nihil sed sint dolorum dolores impedit et atque? Veniam nostrum hic at consequuntur odio totam rerum necessitatibus, corrupti quos.</p>
+        <a href="#" class="btn">Shop Now</a>
+    </div>
+  
+</section>
 
 
 
