--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Responsive Coffee</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <header>
         <a href="#" class="logo">
-            <img src="logocoffee.png" alt="">
+            <img src="logocoffee.png" alt="Logo">
         </a>
         <i class='bx bx-menu'id="menu-icon"></i>
 
@@ -33,14 +33,40 @@
 <section class="home" id="home">
     <div class="home-text">
         <h1>Start your day<br>with coffee</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis numquam saepe nihil sed sint dolorum dolores impedit et atque? Veniam nostrum hic at consequuntur odio totam rerum necessitatibus, corrupti quos.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         Perspiciatis numquam saepe nihil sed sint dolorum dolores impedit et atque?
+         Veniam nostrum hic at consequuntur odio totam rerum necessitatibus, corrupti quos.</p>
         <a href="#" class="btn">Shop Now</a>
     </div>
   
 </section>
-
-
-
+<section class="about" id="about">
+    <div class="about-img">
+        <img src="coffee2.jpg"alt="About Image">
+    </div>
+    <div class="about-txt">
+        <h2>Our History</h2>  
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing icta excepturi nihil accusantium modi et totam eum veritatis earum, labore ipsum, molestias alias?  </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit inventore!</p>
+        <a href="#" class="btn">Learn More</a>
+    </div>
+</section>
+<section class="products" id="products">
+    <div class="heading">
+        <h2>Our popular products</h2>
+    </div>
+    <div class="products-container">
+        <div class="box">
+            <img src="" alt="">
+            <h3>Americano Pure</h3>
+            <div class="content">
+                <span>&25</span>
+                <a href="#">Add to Cart</a>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
