--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <header>
         <a href="#" class="logo">
-            <img src="logocoffee.png" alt="Logo">
+            <img src="img/logocoffee.png" alt="Logo">
         </a>
         <i class='bx bx-menu'id="menu-icon"></i>
 
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="customers.html">Services</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -42,7 +42,7 @@
 </section>
 <section class="about" id="about">
     <div class="about-img">
-        <img src="coffee2.jpg"alt="About Image">
+        <img src="img/coffee2.jpg"alt="About Image">
     </div>
     <div class="about-txt">
         <h2>Our History</h2>  
@@ -58,13 +58,40 @@
     </div>
     <div class="products-container">
         <div class="box">
-            <img src="" alt="">
+            <img src="img/americano.jpg" alt="">
             <h3>Americano Pure</h3>
             <div class="content">
-                <span>&25</span>
+                <span>$25</span>
                 <a href="#">Add to Cart</a>
             </div>
         </div>
+        <div class="box">
+            <img src="americano.jpg" alt="">
+            <h3>Americano Pure</h3>
+            <div class="content">
+                <span>$25</span>
+                <a href="#">Add to Cart</a>
+            </div>
+        </div> <div class="box">
+            <img src="americano.jpg" alt="">
+            <h3>Americano Pure</h3>
+            <div class="content">
+                <span>$25</span>
+                <a href="#">Add to Cart</a>
+            </div>
+        </div> <div class="box">
+            <img src="americano.jpg" alt="">
+            <h3>Americano Pure</h3>
+            <div class="content">
+                <span>$25</span>
+                <a href="#">Add to Cart</a>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="customers" id="customers">
+    <div class="heading">
+
     </div>
 </section>
 
