--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="customers.html">Services</a></li>
+        <li><a href="customers.html">Customers</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
