--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
             <img src="img/logocoffee.png" alt="Logo">
         </a>
         <i class='bx bx-menu'id="menu-icon"></i>
-
         <ul class="navbar">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="customers.html">Customers</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#customers">Customers</a></li>
+            <li><a href="#products">Products</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="header-icon">
             <i class='bx bx-cart' ></i>
@@ -91,9 +90,92 @@
 </section>
 <section class="customers" id="customers">
     <div class="heading">
+        <h2>Our Customer's</h2>
+        <div class="customers-container">
+            <div class="box">
+                <div class="stars">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, soluta deserunt minus sequi voluptatibus alias.</p>
+                <h2>Yasin Arafat</h2>
+                <img src="img/p1.jpg" alt="">
+            </div>
+            <div class="customers-container">
+                <div class="box">
+                    <div class="stars">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half'></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, soluta deserunt minus sequi voluptatibus alias.</p>
+                    <h2>Yasin Arafat</h2>
+                    <img src="img/p2.jpg" alt="">
+                </div>
+                <div class="customers-container">
+                    <div class="box">
+                        <div class="stars">
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star-half'></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, soluta deserunt minus sequi voluptatibus alias.</p>
+                        <h2>Yasin Arafat</h2>
+                        <img src="img/p3.jpg" alt="">
+                    </div>
+        </div>
 
     </div>
 </section>
+<section class="footer">
+    <div class="footer-box">
+        <h2>Coffee Shop</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, explicabo.</p>
+        <div class="social">
+            <a href="#"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="#"><i class='bx bxl-tiktok'></i></a>
+        </div>
+        <div class="footer-box">
+            <h3>Support</h3>
+            <ul>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">Help & Support</a></li>
+            <li><a href="#">Return Policy</a></li>
+            <li><a href="#">Terms Of Use</a></li>
+            <li><a href="#">Product</a></li>
+            </ul>
+        </div>
+        <div class="footer-box">
+            <h3>View Guides</h3>
+            <ul>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Blog Posts</a></li>
+                <li><a href="#">Our Branches</a></li>
+        </ul>
+        </div>
+        <div class="footer-box">
+            <h3>Contact</h3>
+            <div class="contact">
+                <span><i class='bx bxs-map'></i>250 New York City,USA 10001</span>
+                <span><i class='bx bxs-phone'></i>+1 444 766 6123</span>
+                <span><i class='bx bxs-envelope'></i>coffee@shop.com</span>
+            </div>
+        </div>
+    </div>
+</section>
+<div class="copyright">
+    <p>&#169; CarpoolVenom All Right Reserved</p>
+</div>
 
 
 
