--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,54 @@
-<nav class="navbar">
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="customers.html">Customers</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/logo1.png" type="Logo">
+    <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <script src="./script.js" defer></script>
+</head>
+<body>
+    <header>
+        <a href="#" class="logo">
+            <img src="images/logo1.png" alt="Logo">
+        </a>
+
+        
+
+        <ul class="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="customers.html">Customers</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact.html" class="active">Contact</a></li>
+        </ul>
+    
+        <div class="header-icon">
+            <i class='bx bx-menu' id="menu-icon"></i>
+            <i class='bx bx-cart'id="cart-icon"></i>
+            <i class='bx bx-search' id="search-icon"></i>
+            <i class='bx bx-user' id="user-icon"></i>
+        </div>
+
+        <div class="search-box">
+            <input type="search" name="" id=""placeholder="Search Here...">
+
+        </div>
+
+
+
+    <div class="user">
+        <h2>Login now</h2>
+        <input type="email"placeholder="Your Email...">
+        <input type="password" name="" id="" placeholder="Password">
+        <input type="submit" value="Login" class="login-btn">
+        <p>Forget Password<a href="#">Reset Now</a></p>
+        <p>Don't have account<a href="#">Create Now</a></p>
+    </div>
+    </header>
+
+
+</body>
+</html>
