--- a/products.html
+++ b/products.html
@@ -4,13 +4,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/logo1.png" type="Logo">
+    <link rel="icon" href="images/logo1.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <script src="./script.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </head>
 <body>
+
     <header>
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
             <img src="images/logo1.png" alt="Logo">
         </a>
 
@@ -18,14 +23,13 @@
 
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
+            <li><a href="order.html">Order Now</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="customers.html">Customers</a></li>
             <li><a href="products.html" class="active">Products</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     
         <div class="header-icon">
-            <i class='bx bx-menu' id="menu-icon"></i>
             <i class='bx bx-cart'id="cart-icon"></i>
             <i class='bx bx-search' id="search-icon"></i>
             <i class='bx bx-user' id="user-icon"></i>
@@ -39,13 +43,11 @@
         <div class="cart" id="cart">
             <h2>Shporta</h2>
             <ul id="cart-items" aria-live="polite">
-                <!-- Artikujt do të shtohen këtu dinamikisht -->
+ 
             </ul>
             <div class="cart-actions">
                 <button id="checkout">Checkout</button>
-                <button id="clear-cart" aria-label="Pastro shportën">
-                    <i class='bx bxs-trash-alt'></i>
-                </button>
+                <button id="clear-cart">Pastro</button>
             </div>
         </div>
 
@@ -60,18 +62,16 @@
     </header>
 
 
-    <section class="products" id="products">
-        <div class="heading">
-            <h2>Our Products</h2>
-        </div>
+    <body onload="pershendetje1()">
 
+    <section class="products" id="products">
     <div class="products-container">
         <div class="box">
             <img src="images/menu-1.png" alt="">
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
@@ -79,7 +79,7 @@
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
@@ -87,7 +87,7 @@
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
@@ -95,7 +95,7 @@
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
@@ -103,7 +103,7 @@
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
@@ -111,7 +111,7 @@
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
@@ -119,7 +119,7 @@
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
@@ -127,7 +127,7 @@
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
@@ -135,7 +135,7 @@
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
@@ -143,7 +143,7 @@
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
@@ -151,7 +151,7 @@
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
@@ -159,13 +159,47 @@
             <h3>Americano</h3>
             <div class="content">
                 <span>$25</span>
-                <a href="#" class="btn">Add to Cart</a>
+                <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
     </div>
     </section>
 
 
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="products.html">Our Services</a></li>
+                        <li><a href="contact.html">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Get help</h4>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="products.html">Shipping</a></li>
+                        <li><a href="contact.html">Returns</a></li>
+                        <li><a href="order.html">Order Status</a></li>
+                        <li><a href="#">Payment Options</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow us</h4>
+                    <div class="social-links">
+                    <ul>
+                        <li><a href="https://www.facebook.com/" aria-label="Facebook"><i class='bx bxl-facebook'></i></a></li>
+                        <li><a href="https://www.instagram.com/" aria-label="Instagram"><i class='bx bxl-instagram'></i></a></li>
+                        <li><a href="https://www.twitter.com/" aria-label="Twitter"><i class='bx bxl-twitter'></i></a></li>
+                        <li><a href="https://www.youtube.com/" aria-label="Youtube"><i class='bx bxl-youtube'></i></a></li>
+                    </ul>
+                    </div>
+            </div>
+        </div>
+    </footer>
     
 
 
