--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-    <script src="script.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js">
+    </script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js" defer ></script>
+    
 
     <style>
         .home .home-text h1 {
@@ -33,24 +34,6 @@
         }
     )});
     </script>
-
-<!-- <script>
-    // Drag and Drop Functions
-    function allowDrop(event) {
-        event.preventDefault();
-    }
-
-    function drag(event) {
-        event.dataTransfer.setData("text", event.target.id);
-    }
-
-    function drop(event) {
-        event.preventDefault();
-        var data = event.dataTransfer.getData("text");
-        var draggedElement = document.getElementById(data);
-        event.target.appendChild(draggedElement);
-    }
-</script> -->
 </head>
 
 
@@ -138,6 +121,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="products.html">Our Services</a></li>
                         <li><a href="contact.html">Privacy Policy</a></li>
+                        <li><a href="order.html">Order Now</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -146,7 +130,6 @@
                         <li><a href="#">FAQ</a></li>
                         <li><a href="products.html">Shipping</a></li>
                         <li><a href="contact.html">Returns</a></li>
-                        <li><a href="order.html">Order Status</a></li>
                         <li><a href="#">Payment Options</a></li>
                     </ul>
                 </div>
@@ -163,8 +146,7 @@
             </div>
         </div>
     </footer>
-
-
     
 </body>
 </html>
+
