--- a/about.html
+++ b/about.html
@@ -125,10 +125,8 @@ $(document).ready(function() {
         </div>
     
     </header>
-    <!--
-    <button id="callback-btn">Kliko për Callback</button>
-    <div id="callback-box" style="width:100px; height:100px; background-color:blue;"></div>-->
 
+    
     <section id="about">
         <div class="about-img">
             <img src="images/aboutUS.jpg" alt="About Us">
@@ -141,9 +139,9 @@ $(document).ready(function() {
     </section>
 
 
-    <button id="hide-btn">Fshi Paragrafin</button>
-    <button id="show-btn">Trego Paragrafin</button>
-    <p id="text">Ky është një paragraf që mund të fshihet ose të shfaqet.</p>
+    <button id="hide-btn">Fsheh informacione tjera:</button>
+    <button id="show-btn">Shfaq informacione tjera:</button>
+    <p id="text"><b><i>Menaxhere:Arila Behrami.</i></b></p>
 
     <section id="company-timeline">
         <h2><i>Historia Jonë</i></h2>
@@ -207,6 +205,7 @@ $(document).ready(function() {
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="products.html">Our Services</a></li>
                         <li><a href="contact.html">Privacy Policy</a></li>
+                        <li><a href="order.html">Order Now</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -215,7 +214,6 @@ $(document).ready(function() {
                         <li><a href="#">FAQ</a></li>
                         <li><a href="products.html">Shipping</a></li>
                         <li><a href="contact.html">Returns</a></li>
-                        <li><a href="order.html">Order Status</a></li>
                         <li><a href="#">Payment Options</a></li>
                     </ul>
                 </div>
@@ -232,6 +230,5 @@ $(document).ready(function() {
             </div>
         </div>
     </footer>
-   
 </body>
 </html>
