--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Products</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo1.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
@@ -10,7 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
 </head>
 <body>
 
@@ -76,15 +75,15 @@
         </div>
         <div class="box">
             <img src="images/menu-2.png" alt="">
-            <h3>Americano</h3>
+            <h3>Espresso</h3>
             <div class="content">
-                <span>$25</span>
+                <span>$20</span>
                 <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
             <img src="images/menu-3.png" alt="">
-            <h3>Americano</h3>
+            <h3>Cappuccino</h3>
             <div class="content">
                 <span>$25</span>
                 <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
@@ -92,15 +91,15 @@
         </div>
         <div class="box">
             <img src="images/menu-4.png" alt="">
-            <h3>Americano</h3>
+            <h3>Latte</h3>
             <div class="content">
-                <span>$25</span>
+                <span>$30</span>
                 <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
             <img src="images/menu-5.png" alt="">
-            <h3>Americano</h3>
+            <h3>Macchiato</h3>
             <div class="content">
                 <span>$25</span>
                 <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
@@ -108,47 +107,47 @@
         </div>
         <div class="box">
             <img src="images/menu-6.png" alt="">
-            <h3>Americano</h3>
+            <h3>Mocha</h3>
             <div class="content">
-                <span>$25</span>
+                <span>$15</span>
                 <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
             <img src="images/menu-7.png" alt="">
-            <h3>Americano</h3>
+            <h3>Cortado</h3>
             <div class="content">
-                <span>$25</span>
+                <span>$20</span>
                 <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
             <img src="images/menu-8.png" alt="">
-            <h3>Americano</h3>
+            <h3>Ristretto</h3>
             <div class="content">
-                <span>$25</span>
+                <span>$20</span>
                 <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
             <img src="images/menu-9.png" alt="">
-            <h3>Americano</h3>
+            <h3>Affogato</h3>
             <div class="content">
-                <span>$25</span>
+                <span>$30</span>
                 <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
             <img src="images/cart-item1.png" alt="">
-            <h3>Americano</h3>
+            <h3>Turkish Coffee </h3>
             <div class="content">
-                <span>$25</span>
+                <span>$35</span>
                 <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
             </div>
         </div>
         <div class="box">
             <img src="images/cart-item2.png" alt="">
-            <h3>Americano</h3>
+            <h3>Coffee</h3>
             <div class="content">
                 <span>$25</span>
                 <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
@@ -156,7 +155,7 @@
         </div>
         <div class="box">
             <img src="images/cart-item3.png" alt="">
-            <h3>Americano</h3>
+            <h3>Coffee</h3>
             <div class="content">
                 <span>$25</span>
                 <button class="btn add-to-cart" data-product-id="1" data-product-name="Americano" data-product-price="25">Add to Cart</button>
@@ -175,6 +174,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="products.html">Our Services</a></li>
                         <li><a href="contact.html">Privacy Policy</a></li>
+                        <li><a href="order.html">Order Now</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -183,7 +183,6 @@
                         <li><a href="#">FAQ</a></li>
                         <li><a href="products.html">Shipping</a></li>
                         <li><a href="contact.html">Returns</a></li>
-                        <li><a href="order.html">Order Status</a></li>
                         <li><a href="#">Payment Options</a></li>
                     </ul>
                 </div>
@@ -200,9 +199,6 @@
             </div>
         </div>
     </footer>
-    
-
-
 </body>
     
- 
+</html>
