--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section id="audio-player">
         <audio controls autoplay loop>
             <source src="images/videoplayback.weba" type="audio/mpeg">
-            video off coffee
+            video of coffee
         </audio>
     </section>
 
